crates/synthonyx-kit-core/tests/compile-fail/secret_in_derive_struct.stderr
error[E0277]: the trait bound `Secret<String>: serde::Serialize` is not satisfied
 --> tests/compile-fail/secret_in_derive_struct.rs:6:10
  |
6 | #[derive(serde::Serialize)]
  |          ^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `Secret<String>`
7 | struct Wrapper {
8 |     secret: synthonyx_kit_core::Secret<String>,
  |     ------ required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret<String>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `_serde::ser::SerializeStruct::serialize_field`
 --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
  = note: this error originates in the derive macro `serde::Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
